2002-09-27  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/powerpc32/Makefile: Fix typo in comment.

	* sysdeps/powerpc/powerpc64/Makefile
	[$(build-shared) = yes] (pic-ccflag): Define it.
	[$(subdir) = csu] (CFLAGS-initfini.s): Add -fpic here too.

2002-09-27  Roland McGrath  <roland@redhat.com>

	* sysdeps/x86_64/dl-machine.h (elf_machine_type_class): Remove
	unneeded TLS cases.

2002-09-27  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-addr.c (_dl_addr): Set dli_fbase to l_map_start
	unconditionally.  Set dli_fname to _dl_argv[0] only for main program.

2002-09-27  Roland McGrath  <roland@redhat.com>

	* elf/dl-addr.c (_dl_addr): Add a cast.

	* sysdeps/x86_64/dl-machine.h (elf_machine_rela) [USE_TLS]: Handle new
	TLS relocs R_X86_64_DTPMOD64, R_X86_64_DTPOFF64, and R_X86_64_TPOFF64.

	* elf/elf.h (R_X86_64_DTPMOD64, R_X86_64_DTPOFF64, R_X86_64_TPOFF64,
	R_X86_64_TLSGD, R_X86_64_TLSLD, R_X86_64_DTPOFF32,
	R_x86_64_GOTTPOFF, R_X86_64_TPOFF32): New macros.
	(R_X86_64_NUM): Update the value.

2002-09-24  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc32/dl-machine.h (elf_machine_load_address): Don't
	rely on *r_offset of R_SPARC_RELATIVE reloc in .got to contain the
	addend.
	* sysdeps/sparc/sparc64/dl-machine.h (elf_machine_load_address): Use
	the same l_addr computation.
	* sysdeps/sparc/sparc64/configure.in: Removed.
	* sysdeps/sparc/sparc64/configure: Removed.
	* config.h.in (SPARC64_DYNAMIC_BEFORE_GOT): Remove.

2002-09-26  Ulrich Drepper  <drepper@redhat.com>

	* elf/dynamic-link.h (elf_get_dynamic_info): Relocate DT_HASH entry
	if necessary.
	* elf/dl-lookup.c (_dl_setup_hash): DT_HASH entry is already relocated.
	* elf/dl-addr.c (_dl_addr): Use .hash[1] entry to determine end of the
	symbol table if necessary.

2002-09-26  Roland McGrath  <roland@redhat.com>

	* stdlib/longlong.h: Replaced with current version from GCC mainline,
	last modified 2002-09-22  Kazu Hirata  <kazu@cs.umass.edu>.

2002-09-25  Andreas Jaeger  <aj@suse.de>
