@@ -1,3 +1,7 @@
+2002-09-27  Roland McGrath  <roland@redhat.com>
+
+	* sysdeps/x86_64/tls.h [__ASSEMBLER__]: Don't include <pt-machine.h>.
+
 2002-09-24  Roland McGrath  <roland@redhat.com>
 
 	* sysdeps/x86_64/tls.h: New file.
