@@ -1,3 +1,13 @@
+2002-09-27  Roland McGrath  <roland@redhat.com>
+
+	* sysdeps/unix/sysv/linux/x86_64/sysdep.h
+	(__NR_pread, __NR_pwrite): Define these to __NR_pread64, __NR_pwrite64
+	if not defined.
+
+	* sysdeps/unix/sysv/linux/powerpc/lchown.S
+	[SHLIB_COMPAT (libc, GLIBC_2_0, GLIBC_2_1)]: Use this condition
+	on chown compatibility symbol; use compat_symbol, not symbol_version.
+
 2002-09-27  Steven Munroe  <sjmunroe@us.ibm.com>
 
 	* sysdeps/powerpc/powerpc32/Makefile: Fix typo in comment.
